examples/datalog/14_aggregations/46_count_distinct_multi.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_cd_multi
Knowledge graph 'test_cd_multi' created.
Switched to knowledge graph: test_cd_multi
> .kg use test_cd_multi
Switched to knowledge graph: test_cd_multi
> +purchases[("Alice", "Electronics", 1), ("Alice", "Electronics", 2), ("Alice", "Clothing", 1), ("Bob", "Electronics", 1), ("Bob", "Electronics", 1)].
Inserted 4 fact(s) into 'purchases'.
> distinct_products(Cust, <COUNT_DISTINCT:Cat>) :- purchases(Cust, Cat, _).
Script error: Parse error: Unknown aggregate function: 
